<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addExpenseFab"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:clickable="true"
        android:contentDescription="@string/fab_add_new_des"
        android:fontFamily="@font/inter"
        android:textSize="12sp"

        android:text="@string/fab_add_new"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"

        app:elevation="2dp"
        app:icon="@drawable/ic_add_circle"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/currentMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/title_date_placeholder"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/next_btn"
                    app:layout_constraintStart_toEndOf="@+id/prev_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/prev_btn"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:contentDescription="@string/back_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/prev_btn"
                    tools:ignore="RedundantDescriptionCheck" />

                <ImageView
                    android:id="@+id/next_btn"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/next_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/next_btn"
                    tools:ignore="RedundantDescriptionCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/expensesStatContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/expenseIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginVertical="8dp"
                        app:srcCompat="@drawable/ic_expenses"
                        android:contentDescription="@string/expense_logo"/>

                    <TextView
                        android:id="@+id/expenseStat"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/money_placeholder"
                        android:textAlignment="center"
                        android:textColor="#D32F2F"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/expenseLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/expenses"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/balanceStatContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/incomeStatContainer"
                    app:layout_constraintStart_toEndOf="@+id/expensesStatContainer"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.49">

                    <ImageView
                        android:id="@+id/balanceIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginVertical="8dp"
                        app:srcCompat="@drawable/ic_balance"
                        android:contentDescription="@string/balance_logo"/>

                    <TextView
                        android:id="@+id/balanceStat"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/money_placeholder"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/balanceLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/balance"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/incomeStatContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/incomeIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginVertical="8dp"
                        app:srcCompat="@drawable/ic_income"
                        android:contentDescription="@string/income_logo"/>


                    <TextView
                        android:id="@+id/incomeStat"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/money_placeholder"
                        android:textAlignment="center"
                        android:textColor="#00796B"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/incomeLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/income"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/expensesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="128dp" />

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>