<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/expenseTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginVertical="12dp"
            android:contentDescription="@string/add_expense_amount_placeholder"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginVertical="12dp"
            android:contentDescription="@string/add_expense_amount_placeholder"
            android:spinnerMode="dropdown" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_bg"
                android:hint="@string/add_expense_amount_placeholder"
                android:id="@+id/textAddExpenseAmount"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textAddExpenseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_bg"
                android:hint="@string/add_expense_description_placeholder" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnDatePicker"
            style="@style/Widget.MaterialComponents.TimePicker.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginVertical="12dp"
            android:text="@string/add_expense_date_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp" />

<!--        <com.google.android.material.chip.ChipGroup-->
<!--            android:id="@+id/chipContainer"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="12dp"-->
<!--            app:checkedChip="@+id/chipToday"-->
<!--            app:singleSelection="true">-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/chipToday"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:checkable="true"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:text="@string/add_expense_today_chip" />-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/chipYesterday"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:checkable="true"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:text="@string/add_expense_yesterday_chip" />-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/chipCustom"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:checkable="true"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:text="@string/add_expense_custom_chip" />-->
<!--        </com.google.android.material.chip.ChipGroup>-->

        <Button
            android:id="@+id/saveExpenseBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_expense_save_btn" />

        <Button
            android:id="@+id/deleteExpenseBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/delete"
            android:textColor="#F44336"
            android:visibility="invisible"
            app:strokeColor="#F44336" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>