<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            tools:ignore="TextSizeCheck">


            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/applogo"
                android:padding="4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/money_lover_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="InefficientWeight,ImageContrastCheck" />

            <TextView
                android:id="@+id/settingHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/statistics"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appLogo"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/monthTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_gray"
                    android:fontFamily="@font/inter"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    android:text="@string/title_date_placeholder"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_calender"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/nextMonthBtn"
                    app:layout_constraintStart_toEndOf="@+id/prevMonthBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/prevMonthBtn"
                    android:layout_width="48dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/back_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/prev_btn"
                    tools:ignore="RedundantDescriptionCheck" />

                <ImageView
                    android:id="@+id/nextMonthBtn"
                    android:layout_width="48dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/next_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/next_btn"
                    tools:ignore="RedundantDescriptionCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/reportPieChartIncome"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_weight=".50" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/reportPieChartOutcome"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_weight=".50" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fafafa"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fafafa"
                android:paddingBottom="128dp" />

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>